api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: api
  namespace: minio
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
  type: ClusterIP
