webui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: webui
  namespace: minio
spec:
  ports:
  - port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: minio
