api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: minio
  name: api
  namespace: minio
spec:
  port:
    targetPort: 9000
  to:
    kind: Service
    name: api
    weight: 100
