minio.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: minio
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: minio
    name: minio
    namespace: minio
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: minio
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: minio
      spec:
        containers:
        - command:
          - minio
          - server
          - /data
          - --console-address
          - :9001
          image: quay.io/minio/minio
          imagePullPolicy: Always
          name: minio
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: minio
    name: api
    namespace: minio
  spec:
    ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: minio
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: minio
    name: webui
    namespace: minio
  spec:
    ports:
    - port: 9001
      protocol: TCP
      targetPort: 9001
    selector:
      app: minio
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: minio
    name: api
    namespace: minio
  spec:
    port:
      targetPort: 9000
    to:
      kind: Service
      name: api
      weight: 100
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: minio
    name: webui
    namespace: minio
  spec:
    port:
      targetPort: 9001
    to:
      kind: Service
      name: webui
      weight: 100
