webui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: minio
  name: webui
  namespace: minio
spec:
  port:
    targetPort: 9001
  to:
    kind: Service
    name: webui
    weight: 100
